Refactoring classe cálculo